# libdata

./: Cargo.toml  flake.nix  shell.nix
.github/workflows/: rust.yml
datacore/: Cargo.toml
datacore/benches/: io.rs
datacore/src/: block.rs  core.rs  core_trait.rs  hash.rs  keys.rs  lib.rs  merkle.rs  store.rs  store_blocks.rs  store_data.rs  store_state.rs
datacore/src/merkle_tree_stream/: mod.rs  tests.rs
datacore/tests/: core.rs  model.rs  replicate.rs  snapshots.rs
datacore/tests/common/: mod.rs
datacore/tests/snapshots/: snapshots__snapshots_append-2.snap  snapshots__snapshots_append-3.snap  snapshots__snapshots_append.snap
libdata/: Cargo.toml
libdata/src/: cores.rs  iter.rs  key.rs  keypair.rs  lib.rs
libdata/src/replication/: core_replica.rs  handle.rs  link.rs  mod.rs  replica_trait.rs  replication.rs
libdata/tests/: cores.rs  iter.rs  key.rs  keypair.rs  replication.rs
libdata/tests/snapshots/: key__key_secret_key_bytes_have_not_changed.snap  key__key_snapshot_1.snap  key__key_snapshot_2.snap  key__key_snapshot_3.snap
protocol/: Cargo.toml
protocol/src/: channels.rs  duplex.rs  lib.rs  message.rs  options.rs  schema.proto  util.rs
protocol/src/io/: mod.rs  reader.rs  writer.rs
protocol/src/noise/: cipher.rs  handshake.rs  mod.rs
protocol/src/protocol/: handshake.rs  main.rs  mod.rs
protocol/tests/: basic.rs  common.rs  handshake.rs  timeout.rs
