[package]
name = "datacore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
index-access-storage = { git = "https://github.com/MODULUSREBUS/index-access" }
anyhow = "1.0.66"
futures-lite = "1.12.0"
byteorder = "1.4.3"
ed25519-dalek = "1.0.1"
blake3 = "1.3.1"
hex = "0.4.3"
rand_chacha = "0.2"
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
index-access-memory = { git = "https://github.com/MODULUSREBUS/index-access" }
index-access-fs = { git = "https://github.com/MODULUSREBUS/index-access" }
insta = "1.21.0"
tokio = { version = "1.21.2", features = ["full"] }
crypto-hash = "0.3.4"
tempfile = "3.3.0"
criterion = { version = "0.4.0", features = [ "async_tokio" ] }
quickcheck = "1.0.3"
quickcheck_async = "0.1.1"
futures = "0.3.25"

[[bench]]
name = "io"
harness = false
