[package]
name = "datacore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
index-access-storage = { git = "https://github.com/MODULUSREBUS/index-access" }
anyhow = "1"
futures-lite = "1.12"
byteorder = "1.4"
ed25519-compact = "2.0"
blake3 = "1.3"
hex = "0.4"
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
index-access-memory = { git = "https://github.com/MODULUSREBUS/index-access" }
index-access-fs = { git = "https://github.com/MODULUSREBUS/index-access" }
insta = "1.22"
tokio = { version = "1.23", features = ["full"] }
crypto-hash = "0.3"
tempfile = "3.3"
criterion = { version = "0.4", features = [ "async_tokio" ] }
quickcheck = "1.0"
quickcheck_async = "0.1"
futures = "0.3"

[[bench]]
name = "io"
harness = false
