[package]
name = "libdata"
version = "0.1.0"
authors = ["Martin Toman <toman.martin@live.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
datacore = { path = "../datacore" }
protocol = { path = "../protocol" }
anyhow = "1.0.44"
rand = { version = "0.7.3", features = [ "std", "wasm-bindgen" ] }
rand_chacha = "0.3.1"
blake3 = "1.3.1"
futures-lite = "1.12.0"
tokio = { version = "1.18.1", features = [ "sync" ] }
tokio-stream = "0.1.8"
async-trait = "0.1.24"
hex = "0.4"

[dev-dependencies]
index-access-memory = { git = "https://github.com/MODULUSREBUS/index-access" }
quickcheck = "0.9.2"
insta = "1.8.0"
sluice = "0.5.5"
tokio = { version = "1.18.1", features = [ "full" ] }
async-compat = "0.2.1"
