[package]
name = "libdata"
version = "0.1.0"
authors = ["Martin Toman <toman.martin@live.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
datacore = { path = "../datacore" }
protocol = { path = "../protocol" }
anyhow = "1.0.66"
rand_chacha = "0.2"
blake3 = "1.3.1"
futures-lite = "1.12.0"
tokio = { version = "1.21.2", features = [ "sync" ] }
tokio-stream = "0.1.11"
async-trait = "0.1.58"
hex = "0.4.3"

[dev-dependencies]
index-access-memory = { git = "https://github.com/MODULUSREBUS/index-access" }
quickcheck = "1.0.3"
insta = "1.21.0"
sluice = "0.5.5"
tokio = { version = "1.21.2", features = [ "full" ] }
async-compat = "0.2.1"
