[package]
name = "libdata"
version = "0.1.0"
authors = ["Martin Toman <toman.martin@live.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
datacore = { path = "../datacore" }
protocol = { path = "../protocol" }
anyhow = "1"
rand_chacha = "0.2"
blake3 = "1.3"
futures-lite = "1.12"
tokio = { version = "1.23", features = [ "sync" ] }
tokio-stream = "0.1"
async-trait = "0.1"
hex = "0.4"
multi-map = "1.3"

[dev-dependencies]
index-access-memory = { git = "https://github.com/MODULUSREBUS/index-access" }
quickcheck = "1.0"
insta = "1.22"
sluice = "0.5"
tokio = { version = "1.23", features = [ "full" ] }
async-compat = "0.2"
