[package]
name = "protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
tokio = { version = "1.21.2", features = [] }
tokio-stream = "0.1.11"
blake3 = "1.3.1"
blake2-rfc = "0.2.18"
byteorder = "1.4.3"
rand = "0.8.5"
snow = { version = "0.9.0", features = ["risky-raw-split"] }
prost = "0.11.0"
varinteger = "1.0.6"
async-channel = "1.7.1"
hex = "0.4.3"
salsa20 = "0.10.2"
generic-array = "0.14"
futures-timer = "3.0.2"

[build-dependencies]
prost-build = "0.11.1"

[dev-dependencies]
data-encoding = "2.3.2"
remove_dir_all = "0.7.0"
tempfile = "3.3.0"
tokio = { version = "1.21.2", features = ["full"] }
quickcheck = "1.0.3"
quickcheck_async = "0.1.1"
futures = "0.3.25"
sluice = "0.5.5"
futures-test = "0.3.25"
async-compat = "0.2.1"
