[package]
name = "protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
tokio = "1.21"
tokio-stream = "0.1.11"
blake3 = "1.3.1"
blake2-rfc = "0.2.18"
byteorder = "1.4.3"
getrandom = { version = "0.2", features = ["js"] }
snow = { version = "0.9.0", features = ["risky-raw-split"] }
prost = "0.11"
varinteger = "1.0"
async-channel = "1.7"
hex = "0.4.3"
salsa20 = "0.10.2"
generic-array = "0.14"
futures-timer = "3.0"

[build-dependencies]
prost-build = "0.11"

[dev-dependencies]
data-encoding = "2.3"
remove_dir_all = "0.7"
tempfile = "3"
tokio = { version = "1.21", features = ["full"] }
quickcheck = "1.0"
quickcheck_async = "0.1"
futures = "0.3"
sluice = "0.5"
futures-test = "0.3"
async-compat = "0.2"
